[BE] fix: 젠킨스 파이프라인 재수정 및 도커파일 수정